--- a/MovieShopSPA/src/app/app.component.html
+++ b/MovieShopSPA/src/app/app.component.html
@@ -1,6 +1,12 @@
-<h3>
+<div>
+<app-header> </app-header>
 
-  testing
-</h3>
+<div class="container-fluid">
 
-<router-outlet></router-outlet>
+
+ <router-outlet></router-outlet>
+
+</div>
+ <app-footer></app-footer>
+</div>
+
