--- a/MovieShopSPA/src/app/core/layout/header/header.component.html
+++ b/MovieShopSPA/src/app/core/layout/header/header.component.html
@@ -15,25 +15,27 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdown"
-          role="button"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
-          Genres
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+        <div ngbDropdown>
+          <a class="nav-link" ngbDropdownToggle> Genres </a>
+          <div ngbDropdownMenu >
+            <!-- Display Genres -->
+            <app-genres>  
+            </app-genres>
+          </div>
         </div>
       </li>
+
+      <li class="nav-link">
+        <!-- Login -->
+       <a [routerLink]="[ '/login']">Login</a>
+      </li>
+
+      <li class="nav-link">
+        <a [routerLink]="[ '/register']">Register</a>
+      </li>
+
     </ul>
+
     <form class="form-inline my-2 my-lg-0">
       <input
         class="form-control mr-sm-2"
